--- a/detail-series.html
+++ b/detail-series.html
@@ -5,10 +5,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SERIES</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 
 <body>
+    <header>
+        <section>
+            <h1>
+                <a href="./index.html">LIVE STAR</a>
+            </h1>
+            <ul>
+
+                <li>
+                    <form action="./search-results.html" method="GET">
+                        <div>
+                            <input type="text" name="buscar" placeholder="Buscar..">
+                        </div>
+                        <div>
+                            <button type="submit">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
+
+                    </form>
+                </li>
+                <li>
+                    <a href="./index.html">INICIO</a>
+                </li>
+                <li>
+                    <a href="./genres.html">GÉNEROS</a>
+                </li>
+                <li>
+                    <a href="./favoritos.html">FAVORITOS</a>
+                </li>
+            </ul>
+        </section>
+    </header>
+    <main>
     <div>
         <H2>DETALLES DE SERIES</H2>
     </div>
@@ -121,6 +155,25 @@
                 <h4>Fecha de Estreno:</h4>
                 <p>9/6/2021</p>
             </article>
+        </main>
+        <footer>
+            <section>
+                <ul>
+                    <li>
+                        <h4>Roberto Arellano</h4>
+                        <a href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
+                    </li>
+                    <li>
+                        <h4>Martiniano Sanchez</h4>
+                        <a href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
+                    </li>
+                    <li>
+                        <h4>Bonifacio Lastra</h4>
+                        <a href="mailto:blastra@udesa.edu.ar"></a>
+                    </li>
+                </ul>
+            </section>
+        </footer>
 </body>
 
 </html>
