--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIVE STAR</title>
     <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 
 <body>
@@ -16,11 +17,29 @@
                 <a href="./index.html">LIVE STAR</a>
             </h1>
             <ul>
+
+                <li>
+                    <form action="./search-results.html" method="GET">
+                        <div>
+                            <input type="text" name="buscar" placeholder="Buscar..">
+                        </div>
+                        <div>
+                            <button type="submit">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
+
+                    </form>
+                </li>
                 <li>
                     <a href="./index.html">INICIO</a>
                 </li>
-                <li>GENEROS</li>
-                <li>FAVORITOS</li>
+                <li>
+                    <a href="./genres.html">GÉNEROS</a>
+                </li>
+                <li>
+                    <a href="./favoritos.html">FAVORITOS</a>
+                </li>
             </ul>
         </section>
     </header>
@@ -73,7 +92,7 @@
             <article>
                 <img src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
                 <h3>
-                    <a href="./detail-series.html">Daredevil</a>   
+                    <a href="./detail-series.html">Daredevil</a>
                 </h3>
             </article>
             <article>
@@ -128,30 +147,26 @@
                 <h3> Spiderman 2</h3>
             </article>
         </section>
-        <footer>
-            <section>
-                <ul>
-                    <li>
-                        <h4>Roberto Arellano</h4>
-                        <a href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
-                    </li>
-                    <li>
-                        <h4>Martiniano Sanchez</h4>
-                        <a href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
-                    </li>
-                    <li>
-                        <h4>Bonifacio Lastra</h4>
-                        <a href="mailto:blastra@udesa.edu.ar"></a>
-
-
-                    </li>
-                </ul>
-            </section>
-        </footer>
-
-
-
     </main>
+    <footer>
+        <section>
+            <ul>
+                <li>
+                    <h4>Roberto Arellano</h4>
+                    <a href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
+                </li>
+                <li>
+                    <h4>Martiniano Sanchez</h4>
+                    <a href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
+                </li>
+                <li>
+                    <h4>Bonifacio Lastra</h4>
+                    <a href="mailto:blastra@udesa.edu.ar"></a>
+                </li>
+            </ul>
+        </section>
+    </footer>
+
 
 </body>
 
