--- a/detail-series.html
+++ b/detail-series.html
@@ -43,137 +43,159 @@
         </section>
     </header>
     <main>
-    <div>
-        <H2>DETALLES DE SERIES</H2>
-    </div>
-    <section>
-        <article>
-            <h3>Titans</h3>
-            <h4>Temporada: 3</h4>
-            <img src="./img-series/ Titans.jpg" alt="">
-            <h4>Sínopsis:</h4>
-            <p>Se trata de una reunión de distintos personajes de los cómics de DC que se unen para formar un grupo de
-                jóvenes superhéroes. El antiguo compañero de Batman, Nightwing, se encuentra con una serie de jóvenes
-                héroes con problemas que necesitan un mentor desesperadamente para volver a encauzar sus vidas.
-            </p>
-
-            <h4>Calificación</h4>
-            <p>7.6/10⭐</p>
-            <h4>
-                <a href="./genres.html">Género:</a>
-            </h4>
-            <P>
-                <a href="./detail-genres.html">Acción</a>
-            </P>
-            <h4>Fecha de Estreno</h4>
-            <p>12/10/2018</p>
-        </article>
-        <article>
-            <h3>Daredevil</h3>
-            <h4>Temporadas: 3</h4>
-            <img src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
-            <h4>Sínopsis:</h4>
-            <p>
-                La serie de Daredevil gira en torno a Matthew Murdock, un abogado de día y superhéroe de noche. A pesar
-                de ser ciego, posee un oído, un olfato, una fuerza y una agilidad increíblemente desarrolladas. Sin
-                descanso, Matthew Murdock recorrerá las calles de Nueva York a la caza de todo tipo de criminales a los
-                que no puede castigar un tribunal.
-            </p>
-            <h4>Calificación:</h4>
-            <p>8.6/10⭐</p>
-            <h4>
-                <a href="./genres.html">Género:</a>
-            </h4>
-            <P>
-                <a href="./detail-genres.html">Acción</a>
-            </P>
-            <h4>Fecha de Estreno:</h4>
-            <p>10/4/2015</p>
-        </article>
-        <article>
-            <h3>Watchmen</h3>
-            <h4>Temporadas: 1</h4>
-            <img src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
-            <h4>Sínopsis:</h4>
-            <p>
-                Ambientada en un universo alternativo en el que los vigilantes enmascarados son tratados como
-                criminales, la serie 'Watchmen' utiliza el universo del cómic original creado por Alan Moore para crear
-                un contenido completamente nuevo.
-            </p>
-            <h4>Calificación:</h4>
-            <p>8.2/10⭐</p>
-            <h4>
-                <a href="./genres.html">Género:</a>
-            </h4>
-            <P>
-                <a href="./detail-genres.html">Ciencia Ficción</a>
-            </P>
-            <h4>Fecha de Estreno:</h4>
-            <p>20/10/2019</p>
-        </article>
-        <article>
-            <h3>Gotham</h3>
-            <h4>Temporadas: 5</h4>
-            <img src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
-            <h4>Sínopsis:</h4>
-            <p>
-                Precuela de los cómics de Batman, centrada en la adolescencia de Bruce Wayne. Definida por sus
-                responsables como una especie de Smallville, desarrolla la vida de Jim Gordon como policía, y la enlaza
-                con el origen del mito de Batman y de otros villanos como El Pingüino.
-            </p>
-            <h4>Calificación:</h4>
-            <p>7.8/10⭐</p>
-            <h4>
-                <a href="./genres.html">Género:</a>
-            </h4>
-            <P>
-                <a href="./detail-genres.html">Acción</a>
-            </P>
-            <h4>Fecha de Estreno:</h4>
-            <p>22/9/2014</p>
+        <div>
+            <H2>DETALLES DE SERIES</H2>
+        </div>
+        <section>
             <article>
-                <h3>Loki</h3>
-                <h4>Temporadas: 1</h4>
-                <img src="./img-series/poster-loki.jpg" alt="">
+                <h3>Titans</h3>
+                <h4>Temporada: 3</h4>
+                <img src="./img-series/ Titans.jpg" alt="">
+            </article>
+            <article>
                 <h4>Sínopsis:</h4>
-                <p> Loki es llevado ante la misteriosa organización llamada Autoridad de Variación Temporal después de
-                    robar el Cubo Cósmico durante los eventos de Avengers: Endgame (2019) y se le da a elegir
-                    enfrentarse a la eliminación de la realidad o ayudar contra una amenaza mayor,​ por lo cual Loki
-                    termina viajando a través del tiempo, alterando la historia humana.
-
-                    Confirmada renovación para una segunda temporada.
-
+                <p>Se trata de una reunión de distintos personajes de los cómics de DC que se unen para formar un grupo
+                    de
+                    jóvenes superhéroes. El antiguo compañero de Batman, Nightwing, se encuentra con una serie de
+                    jóvenes
+                    héroes con problemas que necesitan un mentor desesperadamente para volver a encauzar sus vidas.
                 </p>
-                <h4>Calificación:</h4>
-                <p>8.4/10⭐</p>
+
+                <h4>Calificación</h4>
+                <p>7.6/10⭐</p>
                 <h4>
-                    <a href="./genres.html">Género</a>
+                    <a href="./genres.html">Género:</a>
                 </h4>
                 <P>
-                    <a href="./detail-genres.html">Familia</a>
+                    <a href="./detail-genres.html">Acción</a>
+                </P>
+                <h4>Fecha de Estreno</h4>
+                <p>12/10/2018</p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <h3>Daredevil</h3>
+                <h4>Temporadas: 3</h4>
+                <img src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
+            </article>
+            <article>
+                <h4>Sínopsis:</h4>
+                <p>
+                    La serie de Daredevil gira en torno a Matthew Murdock, un abogado de día y superhéroe de noche. A
+                    pesar
+                    de ser ciego, posee un oído, un olfato, una fuerza y una agilidad increíblemente desarrolladas. Sin
+                    descanso, Matthew Murdock recorrerá las calles de Nueva York a la caza de todo tipo de criminales a
+                    los
+                    que no puede castigar un tribunal.
+                </p>
+                <h4>Calificación:</h4>
+                <p>8.6/10⭐</p>
+                <h4>
+                    <a href="./genres.html">Género:</a>
+                </h4>
+                <P>
+                    <a href="./detail-genres.html">Acción</a>
                 </P>
                 <h4>Fecha de Estreno:</h4>
-                <p>9/6/2021</p>
+                <p>10/4/2015</p>
             </article>
-        </main>
-        <footer>
-            <section>
-                <ul>
-                    <li>
-                        <h4>Roberto Arellano</h4>
-                        <a href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
-                    </li>
-                    <li>
-                        <h4>Martiniano Sanchez</h4>
-                        <a href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
-                    </li>
-                    <li>
-                        <h4>Bonifacio Lastra</h4>
-                        <a href="mailto:blastra@udesa.edu.ar"></a>
-                    </li>
-                </ul>
-            </section>
-        </footer>
+        </section>
+        <section>
+            <article>
+                <h3>Watchmen</h3>
+                <h4>Temporadas: 1</h4>
+                <img src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
+            </article>
+            <article>
+                <h4>Sínopsis:</h4>
+                <p>
+                    Ambientada en un universo alternativo en el que los vigilantes enmascarados son tratados como
+                    criminales, la serie 'Watchmen' utiliza el universo del cómic original creado por Alan Moore para
+                    crear
+                    un contenido completamente nuevo.
+                </p>
+                <h4>Calificación:</h4>
+                <p>8.2/10⭐</p>
+                <h4>
+                    <a href="./genres.html">Género:</a>
+                </h4>
+                <P>
+                    <a href="./detail-genres.html">Ciencia Ficción</a>
+                </P>
+                <h4>Fecha de Estreno:</h4>
+                <p>20/10/2019</p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <h3>Gotham</h3>
+                <h4>Temporadas: 5</h4>
+                <img src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
+            </article>
+            <article>
+                <h4>Sínopsis:</h4>
+                <p>
+                    Precuela de los cómics de Batman, centrada en la adolescencia de Bruce Wayne. Definida por sus
+                    responsables como una especie de Smallville, desarrolla la vida de Jim Gordon como policía, y la
+                    enlaza
+                    con el origen del mito de Batman y de otros villanos como El Pingüino.
+                </p>
+                <h4>Calificación:</h4>
+                <p>7.8/10⭐</p>
+                <h4>
+                    <a href="./genres.html">Género:</a>
+                </h4>
+                <P>
+                    <a href="./detail-genres.html">Acción</a>
+                </P>
+                <h4>Fecha de Estreno:</h4>
+                <p>22/9/2014</p>
+                <article>
+                    <h3>Loki</h3>
+                    <h4>Temporadas: 1</h4>
+                    <img src="./img-series/poster-loki.jpg" alt="">
+                    <h4>Sínopsis:</h4>
+                    <p> Loki es llevado ante la misteriosa organización llamada Autoridad de Variación Temporal después
+                        de
+                        robar el Cubo Cósmico durante los eventos de Avengers: Endgame (2019) y se le da a elegir
+                        enfrentarse a la eliminación de la realidad o ayudar contra una amenaza mayor,​ por lo cual Loki
+                        termina viajando a través del tiempo, alterando la historia humana.
+
+                        Confirmada renovación para una segunda temporada.
+
+                    </p>
+                    <h4>Calificación:</h4>
+                    <p>8.4/10⭐</p>
+                    <h4>
+                        <a href="./genres.html">Género</a>
+                    </h4>
+                    <P>
+                        <a href="./detail-genres.html">Familia</a>
+                    </P>
+                    <h4>Fecha de Estreno:</h4>
+                    <p>9/6/2021</p>
+                </article>
+        </section>
+    </main>
+    <footer>
+        <section>
+            <ul>
+                <li>
+                    <h4>Roberto Arellano</h4>
+                    <a href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
+                </li>
+                <li>
+                    <h4>Martiniano Sanchez</h4>
+                    <a href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
+                </li>
+                <li>
+                    <h4>Bonifacio Lastra</h4>
+                    <a href="mailto:blastra@udesa.edu.ar"></a>
+                </li>
+            </ul>
+        </section>
+    </footer>
 </body>
 
 </html>
