Realice cambios en estructuras html y hice el modele la pagina de generos

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -53,6 +53,9 @@
                 <h3>Avengers:EndGame</h3>
                 <h4>Duración (3h 2m)</h4>
                 <img src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>Sínopsis:</h4>
@@ -84,6 +87,9 @@
                 <h3>The Dark Knight</h3>
                 <h4>Duración (2h 32m)</h4>
                 <img src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>Sínopsis:</h4>
@@ -113,6 +119,9 @@
                 <h3>The Suicide Squad</h3>
                 <h4>Duración (2h 12m)</h4>
                 <img src="./img/peli1.jpg" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>Sínopsis:</h4>
@@ -144,6 +153,9 @@
                     <a>Duración (2h 10m)</a>
                 </h4>
                 <img src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>Sínopsis:</h4>
@@ -173,6 +185,9 @@
                 <h3>Venom</h3>
                 <h4>Duración (2h 20m)</h4>
                 <img src="./img/venom-cartel-final-1537282420.jpg" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>Sínopsis:</h4>
@@ -211,6 +226,9 @@
                 </h4>
 
                 <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>
@@ -256,6 +274,9 @@
                     Duración (1h 48m)
                 </h4>
                 <img src="./img-series-nuevo/DeadPool.jpg" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>
@@ -299,6 +320,9 @@
                     Duración (2h 6m)
                 </h4>
                 <img src="./img-series-nuevo/Iron Man.jpg" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>
@@ -341,6 +365,9 @@
                     Duración (2h)
                 </h4>
                 <img src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
                 <article>
                     <h4>
                         Sínopsis:
@@ -388,6 +415,9 @@
                     Duración (2h 7m)
                 </h4>
                 <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>
