--- a/detail-series.html
+++ b/detail-series.html
@@ -52,6 +52,9 @@
                 <h3>Titans</h3>
                 <h4>Temporada: 3</h4>
                 <img src="./img-series/poster titans.jpg" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>Sínopsis:</h4>
@@ -79,6 +82,9 @@
                 <h3>Daredevil</h3>
                 <h4>Temporadas: 3</h4>
                 <img src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>Sínopsis:</h4>
@@ -107,6 +113,9 @@
                 <h3>Watchmen</h3>
                 <h4>Temporadas: 1</h4>
                 <img src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>Sínopsis:</h4>
@@ -133,6 +142,9 @@
                 <h3>Gotham</h3>
                 <h4>Temporadas: 5</h4>
                 <img src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
+                <div>
+                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                </div>
             </article>
             <article>
                 <h4>Sínopsis:</h4>
@@ -156,6 +168,11 @@
                     <h3>Loki</h3>
                     <h4>Temporadas: 1</h4>
                     <img src="./img-series/poster-loki.jpg" alt="">
+                    <div>
+                        <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                    </div>
+                </article>
+                <article>
                     <h4>Sínopsis:</h4>
                     <p> Loki es llevado ante la misteriosa organización llamada Autoridad de Variación Temporal después
                         de
