--- a/genres.html
+++ b/genres.html
@@ -42,6 +42,23 @@
         </section>
     </header>
     <main>
+        <h2>GENEROS</h2>
+        <section>
+            <h3>GENEROS DE PELICULAS</h3>
+            <ul>
+                <li>CIENCIA FICCIÓN</li>
+                <li>ACCIÓN</li>
+                <li>FAMILIA</li>
+            </ul>
+        </section>
+        <section>
+            <h3>GENEROS DE SERIES</h3>
+            <ul>
+                <li>CIENCIA FICCIÓN</li>
+                <li>ACCIÓN</li>
+                <li>FAMILIA</li>
+            </ul>
+        </section>
 
 
 
