--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 
 <body>
     <header>
-        <section class="FlexPadre">
-            <h1 class="titulo">
-                <a href="./index.html" class="tituloprincipal">LIVE STAR</a>
-            </h1>
-            <article>
-                <ul type="none" class="flexhijo">
-
+        <section>
+            <article class="controles">
+                <h1>
+                    <a href="./index.html">LIVE STAR</a>
+                </h1>
+                <ul type="none">
                     <li>
-                        <form action="./search-results.html" method="GET" class="buscador">
+                        <form action="./search-results.html" method="GET">
                             <div>
                                 <input type="text" name="buscar" placeholder="Buscar..">
                             </div>
@@ -34,21 +33,22 @@
                     </li>
                     <li>
                         <div>
-                            <a href="./index.html" class="controles">INICIO</a>
+                            <a href="./index.html">INICIO</a>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <a href="./genres.html" class="controles">GÉNEROS</a>
+                            <a href="./genres.html">GÉNEROS</a>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <a href="./favoritos.html" class="controles">FAVORITOS</a>
+                            <a href="./favoritos.html">FAVORITOS</a>
                         </div>
                     </li>
                 </ul>
             </article>
+
         </section>
     </header>
     <main>
@@ -158,7 +158,7 @@
     </main>
     <footer>
         <section>
-            <ul>
+            <ul class="footer">
                 <li>
                     <h4>Roberto Arellano</h4>
                     <a href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
