termine el html de generos

--- a/genres.html
+++ b/genres.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="./css/genres.css">
 </head>
+
 <body>
     <header>
         <section>
@@ -46,22 +48,31 @@
         <section>
             <h3>GENEROS DE PELICULAS</h3>
             <ul>
-                <li>CIENCIA FICCIÓN</li>
-                <li>ACCIÓN</li>
-                <li>FAMILIA</li>
+                <li>
+                    <a href="./detail-genres.html">CIENCIA FICCIÓN</a>
+                </li>
+                <li>
+                    <a href="./detail-genres.html">ACCIÓN</a>
+                </li>
+                <li>
+                    <a href="./detail-genres.html">FAMILIA</a>
+                </li>
             </ul>
         </section>
         <section>
             <h3>GENEROS DE SERIES</h3>
             <ul>
-                <li>CIENCIA FICCIÓN</li>
-                <li>ACCIÓN</li>
-                <li>FAMILIA</li>
+                <li>
+                    <a href="./detail-genres.html">CIENCIA FICCIÓN</a>
+                </li>
+                <li>
+                    <a href="./detail-genres.html">ACCIÓN</a>
+                </li>
+                <li>
+                    <a href="./detail-genres.html">FAMILIA</a>
+                </li>
             </ul>
         </section>
-
-
-
 
     </main>
     <footer>
@@ -83,6 +94,7 @@
         </section>
     </footer>
 
-    
+
 </body>
+
 </html>
