Complete el html de favoritos

--- a/favoritos.html
+++ b/favoritos.html
@@ -42,6 +42,39 @@
         </section>
     </header>
     <main>
+        <h2>FAVORITOS</h2>
+        <section>
+            <h3>Agregados Recientemente</h3>
+            <ul>
+                <li>
+                    <img src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
+                    <h4>
+                        <a href="./detail-movie.html">The Dark Knight</a>
+                    </h4>
+                </li>
+                <li>
+                    <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
+                    <h4>
+                        <a href="./detail-movie.html">Spider-Man 2</a>
+                    </h4>
+                </li>
+                <li>
+                    <img src="./img-series-nuevo/Iron Man.jpg" alt="">
+                    <h4>
+                        <a href="./detail-movie.html"><Iron-Man></Iron-Man></a>
+                    </h4>
+                </li>
+                <li>
+                    <img src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
+                    <a href="./detail-series.html">Daredevil</a>
+                </li>
+                <li>
+                    <img src="./img-series/poster-loki.jpg" alt="">
+                    <a href="./detail-series.html">Loki</a>
+                </li>
+            </ul>
+
+        </section>
 
 
 
