--- a/detail-genres.html
+++ b/detail-genres.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="./css/detail-genres.css">
 </head>
+
 <body>
     <header>
         <section>
@@ -42,6 +44,92 @@
         </section>
     </header>
     <main>
+        <h2>GENEROS DE PELICULAS</h2>
+        <section>
+            <h3>ACCIÓN</h3>
+            <ul>
+                <li>
+                    <img src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
+                    <h4>The Dark Knight</h4>
+                </li>
+                <li>
+                    <img src="./img-series-nuevo/DeadPool.jpg" alt="">
+                    <h4>Deadpool</h4>
+                </li>
+                <li>
+                    <a href="./img-series-nuevo/Iron Man.jpg"></a>
+                    <h4>Iron Man</h4>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>CIENCIA FICCIÓN</h3>
+            <ul>
+                <li>
+                  <img src="./img/peli1.jpg" alt=""> 
+                  <h4>The Suicide Squad</h4> 
+                </li>
+                <li>
+                    <img src="./img/venom-cartel-final-1537282420.jpg" alt="">
+                    <h4>Venom</h4>
+                </li>
+                <li>
+                    <img src="./img-series-nuevo/Justice League.jpg" alt="">
+                    <h4>Justice League</h4>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>FAMILIA</h3>
+            <li>
+               <img src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
+               <H4>Avengers EndGame</H4>
+            </li>
+            <li>
+                <img src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
+                <h4>Spiderman Far From Home</h4>
+            <li>
+                <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
+                <h4>Avengers Infinity War</h4>
+            </li>
+            <li></li>
+        </section>
+        <h2>GENEROS DE SERIES</h2>
+        <section>
+            <h3>ACCIÓN</h3>
+            <ul>
+                <li>
+                    <img src="./img-series/poster titans.jpg" alt="">
+                    <h4>Titans</h4>
+                </li>
+                <li>
+                    <img src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
+                    <h4>Daredevil</h4>
+                </li>
+                <li>
+                    <img src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
+                    <h4>Gotham</h4>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>CIENCIA FICCIÓN</h3>
+            <ul>
+                <li>
+                    <img src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
+                    <h4>Watchmen</h4>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>FAMILIA</h3>
+            <ul>
+                <li>
+                    <img src="./img-series/poster-loki.jpg" alt="">
+                    <h4>Loki</h4>
+                </li>
+            </ul>
+        </section>
 
 
     </main>
@@ -63,6 +151,7 @@
             </ul>
         </section>
     </footer>
-    
+
 </body>
+
 </html>
